[package]
name = "cmdb-ip-mapping"
version = "0.3.0"
authors = ["袁殷 <2212079150@qq.com>"]
edition = "2018"
description = "Get appuk by ip from cmdb in rlink task."
keywords = ["rlink"]
repository = "https://github.com/yuanyinyan/cmdb-ip-mapping.git"
license = "MIT/Apache-2.0"

[lib]
name = "cmdb_ip_mapping"

[dependencies]
rlink = "0.4"
rlink-derive = "0.2"
rlink-connector-kafka = "0.4"

log = "0.4"

lazy_static = "1.4.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

dashmap = "3.11"

tokio = { version = "1", features = ["full"] }
